--- a/index.html
+++ b/index.html
@@ -774,6 +774,36 @@
     </div>
   </section>
 
+
+  <!-- First Sale Section -->
+  <br>
+  <section id="FirstSale" class="cd-section bg-light">
+    <div class="container">
+      <h4>First Sale</h4>
+
+      <p><b>Clients</b></p>  
+      <p>Even though there are changes to be made to the user interface, we decided to share the MVP with the first subscribers that registered at milestone 5. We contacted them asked in a email to complete a questionnaire about how they feel about the application and how likely they are to order food from it.<p>
+      <img src="img/dovada_mail_mvp.png">
+        <br>  
+      <p>Most of them answered that the application seems to be is easy to use and to understand. They said that it would be likely to use this application </p>
+      <p> Results can be found <a href="https://drive.google.com/open?id=1cRwqrWNCCB_g2puU74m3C1TDNow3h6LKIPw80iMLLh0">here</a><p>
+      <p><b>Restaurants</b></p>
+      <p>Another confirmation is regarding whether restaurants would use this application.</p>
+      <p>We looked at our competitors and saw that they keep getting more restaurants involved and usually restaurants would be enrolled in partnerships with different food ordering apps in the same time.</p>
+      <pre>Name         Number of restaurants</pre>
+      <pre>Food Panda   400</pre>
+      <pre>Glovo        100</pre>
+      <pre>Takeaway     500</pre>
+      <pre>Uber Eats    700</pre>
+
+      <p> <a href="https://www.trendshrb.ro/stiri/dupa-numai-un-an-uber-eats-livreaza-de-la-700-de-restaurante-din-bucuresti/"> A survey ordered by Uber Eats</a> showed that restaurants are more than happy to prepare food for a food ordering app.</p>
+      <p><i>Datele arată că atunci când vine vorba de top trei beneficii ale colaborării cu Uber Eats, 82% dintre respondenți au afirmat că acest parteneriat îi ajută să își crească numărul de comenzi, să livreze mai rapid comenzile (70%) și să aibă mai multă vizibilitate pentru afacerea lor (68%). </i></p>
+      <p><i>De asemenea, 72% dintre restaurantele care au răspuns sondajului spun că Uber Eats le-a ajutat să își crească afacerea. Aproape jumătate (47%) dintre respondenți spun că au înregistrat o creștere cuprinsă între 10% și 30%. Când vine vorba de cele mai multe comenzi primite într-o zi, 53% dintre restaurante au primit între 20 și 50 comenzi prin aplicația Uber Eats, în timp ce 8% au avut între 50 și 100 comenzi. 31% dintre restaurante au spus că se gândesc să angajeze mai mult personal pentru a acoperi numărul de comenzi în creștere, în timp ce 35% dintre ei se gândesc să își extindă afacerile. 9 din 10 manageri sau proprietari de restaurante au spus că ar recomanda Uber Eats și altor restaurante. </i></p>
+
+      <p>Many restaurants can be found in multiple food ordering applications. While we did not got in touch with any restaurant owner, we believe that restaurant owners would be happy to integrate an application that takes care particularly of the unsold stock they have every day.<p>
+    </div>
+  </section>
+
   <!-- Contact Section -->
   <section id="contact" class="contact-section bg-black">
     <div class="container">
